spec/e2e/field/set_on_function.lit
fn foo {}

foo.bar = "value"; # error: [line 3] Runtime error: Only instances have fields.
